--- a/TDT4195-StarterCode-master/TDT4195-StarterCode-master/assignment3/2a.ipynb
+++ b/TDT4195-StarterCode-master/TDT4195-StarterCode-master/assignment3/2a.ipynb
@@ -14,10 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def lower_sum(upper_limit, array, function):\n",
+    "    \"\"\"\n",
+    "    Returns the sum of a function up to a upper_limit\n",
+    "    \"\"\"\n",
+    "    l_sum = 0\n",
+    "    for i in range(0,upper_limit):\n",
+    "        l_sum += function(i, array[i])\n",
+    "    \n",
+    "    return l_sum\n",
+    "\n",
     "def otsu_thresholding(im: np.ndarray) -> int:\n",
     "    \"\"\"\n",
     "        Otsu's thresholding algorithm that segments an image into 1 or 0 (True or False)\n",
@@ -30,8 +40,10 @@
     "    \"\"\"\n",
     "    assert im.dtype == np.uint8\n",
     "    ### START YOUR CODE HERE ### (You can change anything inside this block) \n",
+    "    #the steps and formulas are taken from the otsu_thresholding.pdf handout\n",
+    "    \n",
     "    # You can also define other helper functions\n",
-    "    L = 256\n",
+    "    L = 256 #as the range is from 0 to 255\n",
     "    \n",
     "    # 1. Compute normalized histogram of the input image \n",
     "    # The components of the histogram is denoted p_i, i = 0,1,2,..., L-1\n",
@@ -39,154 +51,87 @@
     "    sum_hist = np.sum(hist)\n",
     "    p = hist/sum_hist\n",
     "    \n",
-    "    #2. \n",
-    "    threshold = 128\n",
+    "    #checks that the histogram is normalized:\n",
+    "    assert(np.sum(p) == 1)\n",
+    "    \n",
+    "    # 2. Compute the cumulative sums, P_1(k), k = 0,1,2,..., L-1\n",
+    "    # P_1 is the sum of p_i, i = 0,1,2,..., k\n",
+    "    # equation (10-49)\n",
+    "    \n",
+    "    P_1 = np.fromiter(map(lambda k: lower_sum(k+1,p,lambda i,p_i : p_i), range(L)), np.float)\n",
+    "    \n",
+    "    # 3. Compute the cumulative mean (average intensity) , m(k), up to level k \n",
+    "    # equation (10-53)\n",
+    "    m = np.fromiter(map(lambda k: lower_sum(k+1,p,lambda i,p_i : p_i*i), range(L)),np.float)\n",
+    "    \n",
+    "    # 4.Compute the global mean (average intensity of the entire image), m_g\n",
+    "    # equation (10-54)\n",
+    "    m_g = lower_sum(L-1,p,lambda p_i,i : p_i*i)\n",
+    "    \n",
+    "    # 5. Compute the between class variance, sigma_B_2, for k = 0,1,2,...L-1\n",
+    "    # equation (10-62)\n",
+    "    sigma_B_2 = np.divide((m_g*P_1-m),(P_1*(1-P_1)))\n",
+    "    \"\"\" what if I divide on 0?\"\"\"\n",
+    "    sigma_B_2[np.isnan(sigma_B_2)] = 0 #exchanges nan with 0\n",
+    "\n",
+    "    \n",
+    "    # 6. Obtain Otsu threshold k_star as the value of k for which sigma_B_2 is maximum, this is the optimal threshold\n",
+    "    # equation (10-63)\n",
+    "    # If no unique maximum exists, it is customary to average the values of k in which sigma_B_2 is maximum\n",
+    "    \n",
+    "    sigma_B_2_max = np.amax(sigma_B_2)\n",
+    "    \n",
+    "    \"\"\n",
+    "    k_star_lst = np.argwhere(sigma_B_2 == sigma_B_2_max).flatten().tolist()\n",
+    "    k_star = np.floor_divide(np.sum(k_star_lst), len(k_star_lst))\n",
+    "    \"\"\n",
+    "    # 7. Compute the global variance sigma_G_2\n",
+    "    # equation (10-58)\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Why do I do this without it impacting the threshold?\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    sigma_G_2 = lower_sum(L, p, lambda i, p_i: (i - m_g)**2 * p_i)\n",
+    "    \n",
+    "    #Obtain the seperability measure eta_star with k = k_star\n",
+    "    # equation (10-61)\n",
+    "    eta = sigma_B_2 / sigma_G_2\n",
+    "    eta_star = eta[k_star]\n",
+    "    \n",
+    "    \n",
+    "    threshold = k_star\n",
     "    return threshold\n",
     "    ### END YOUR CODE HERE ### "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading image: images\\thumbprint.png\n",
-      "[0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 4.05263563e-06 4.05263563e-06 0.00000000e+00 4.05263563e-06\n",
-      " 4.05263563e-06 8.10527126e-06 1.21579069e-05 1.62105425e-05\n",
-      " 2.83684494e-05 4.86316276e-05 5.67368988e-05 8.91579839e-05\n",
-      " 8.10527126e-05 9.72632552e-05 1.39815929e-04 1.74263332e-04\n",
-      " 2.67473952e-04 2.91789765e-04 4.19447788e-04 5.32921586e-04\n",
-      " 6.95027011e-04 7.57842863e-04 8.99685110e-04 1.04557999e-03\n",
-      " 1.21781701e-03 1.44881724e-03 1.68184379e-03 1.92500193e-03\n",
-      " 2.16816006e-03 2.45792351e-03 2.79023963e-03 3.48931928e-03\n",
-      " 3.66966156e-03 4.04453036e-03 4.42750443e-03 4.68687311e-03\n",
-      " 5.23600524e-03 5.45484756e-03 6.11542717e-03 6.46800647e-03\n",
-      " 6.77195414e-03 7.20558615e-03 7.48724433e-03 8.05056068e-03\n",
-      " 8.63616653e-03 8.66048234e-03 8.95024579e-03 9.42440416e-03\n",
-      " 9.56422009e-03 1.00606680e-02 9.98974683e-03 1.05267211e-02\n",
-      " 1.05287474e-02 1.09076688e-02 1.09603531e-02 1.09461688e-02\n",
-      " 1.10566032e-02 1.09117214e-02 1.10069584e-02 1.09360373e-02\n",
-      " 1.10393795e-02 1.09704847e-02 1.12278270e-02 1.14628799e-02\n",
-      " 1.09360373e-02 1.08975372e-02 1.07779845e-02 1.08043266e-02\n",
-      " 1.07840634e-02 1.07496160e-02 1.10495110e-02 1.04172999e-02\n",
-      " 1.03038261e-02 1.00019047e-02 1.00930890e-02 1.01741418e-02\n",
-      " 1.05003789e-02 1.01559049e-02 9.56827273e-03 9.56219377e-03\n",
-      " 9.67364125e-03 9.29674614e-03 9.21974606e-03 9.03940378e-03\n",
-      " 9.05358800e-03 8.82664041e-03 8.65237707e-03 8.43556107e-03\n",
-      " 8.83677199e-03 8.45379793e-03 8.53485064e-03 8.35045572e-03\n",
-      " 8.25724510e-03 8.00598169e-03 8.01408696e-03 8.07487650e-03\n",
-      " 7.76282355e-03 7.67974452e-03 7.70203402e-03 7.52574437e-03\n",
-      " 7.30284941e-03 7.15492821e-03 7.17924402e-03 6.85098054e-03\n",
-      " 6.99282278e-03 6.72534883e-03 6.53690127e-03 6.40721693e-03\n",
-      " 6.49232228e-03 6.25929573e-03 6.39100639e-03 6.17013775e-03\n",
-      " 5.80337422e-03 5.84896638e-03 5.91482170e-03 6.08705872e-03\n",
-      " 6.13163771e-03 5.87226903e-03 5.80945318e-03 5.35150535e-03\n",
-      " 5.41634752e-03 5.16305779e-03 5.20966310e-03 5.07389981e-03\n",
-      " 5.25829473e-03 4.77805741e-03 4.95333390e-03 4.96650497e-03\n",
-      " 4.94421547e-03 4.54300454e-03 4.51058346e-03 4.67674152e-03\n",
-      " 4.87937330e-03 4.38089912e-03 4.27350427e-03 4.34442540e-03\n",
-      " 4.43560970e-03 4.20460947e-03 4.32010958e-03 3.98981978e-03\n",
-      " 3.98171451e-03 3.88242494e-03 3.97968819e-03 4.04453036e-03\n",
-      " 3.91687234e-03 3.74666164e-03 3.62508257e-03 3.73855637e-03\n",
-      " 3.79124063e-03 3.70816160e-03 3.81150381e-03 3.45487188e-03\n",
-      " 3.33329281e-03 3.64737207e-03 3.38395075e-03 3.36368757e-03\n",
-      " 3.03137145e-03 3.18942424e-03 2.91789765e-03 2.82063440e-03\n",
-      " 2.78720016e-03 2.72742378e-03 2.73147642e-03 2.68487111e-03\n",
-      " 2.53087095e-03 2.33229181e-03 2.21881801e-03 2.26542332e-03\n",
-      " 2.16410743e-03 2.07089681e-03 1.94729142e-03 1.80342286e-03\n",
-      " 1.76694914e-03 1.60079107e-03 1.77302809e-03 1.47515937e-03\n",
-      " 1.67171220e-03 1.39208034e-03 1.27252759e-03 1.16513274e-03\n",
-      " 1.21173805e-03 1.16310643e-03 1.12055375e-03 1.09826426e-03\n",
-      " 1.17931697e-03 9.94922048e-04 1.14486957e-03 1.04760631e-03\n",
-      " 1.23808019e-03 1.24213282e-03 1.29886972e-03 1.25226441e-03\n",
-      " 1.44071197e-03 1.50150150e-03 1.61092266e-03 1.54202786e-03\n",
-      " 1.63118584e-03 1.49744887e-03 1.34750135e-03 1.29684340e-03\n",
-      " 1.20160646e-03 1.06381685e-03 8.10527126e-04 1.29481708e-03]\n",
-      "Found optimal threshold: 128\n",
+      "Reading image: images\\thumbprint.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Kari Ness\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:53: RuntimeWarning: invalid value encountered in true_divide\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found optimal threshold: 229\n",
       "Saving image to: image_processed\\thumbprint-segmented.png\n",
       "Reading image: images\\polymercell.png\n",
-      "[0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 1.53881327e-05 5.71559214e-05\n",
-      " 5.27593120e-05 5.71559214e-05 3.73711793e-05 4.61643980e-05\n",
-      " 4.61643980e-05 7.25440540e-05 6.59491400e-05 6.59491400e-05\n",
-      " 8.13372727e-05 9.01304914e-05 8.13372727e-05 1.05518624e-04\n",
-      " 1.25303366e-04 1.71467764e-04 1.58277936e-04 1.62674545e-04\n",
-      " 1.67071155e-04 1.91252506e-04 1.73666069e-04 2.30821990e-04\n",
-      " 3.29745700e-04 3.80306707e-04 4.17677887e-04 5.42981253e-04\n",
-      " 4.57247371e-04 2.79184693e-04 2.35218599e-04 2.59399951e-04\n",
-      " 3.16555872e-04 3.73711793e-04 3.89099926e-04 3.75910098e-04\n",
-      " 2.92374521e-04 2.98969435e-04 2.24227076e-04 2.44011818e-04\n",
-      " 2.59399951e-04 2.59399951e-04 2.98969435e-04 2.85779607e-04\n",
-      " 3.07762653e-04 2.85779607e-04 3.14357567e-04 2.83581302e-04\n",
-      " 3.36340614e-04 9.73848968e-04 2.29722838e-03 3.69535015e-03\n",
-      " 4.22514157e-03 3.46013155e-03 2.25326228e-03 1.90153354e-03\n",
-      " 1.96528437e-03 2.72369948e-03 4.12841617e-03 5.48696845e-03\n",
-      " 6.73120889e-03 4.95937533e-03 2.77426049e-03 2.31261651e-03\n",
-      " 2.41154022e-03 3.80526538e-03 6.72681228e-03 7.54238331e-03\n",
-      " 1.30337484e-02 1.38998804e-02 6.19702086e-03 5.79033449e-03\n",
-      " 7.77540361e-03 2.99013401e-02 1.13030231e-01 2.88285674e-02\n",
-      " 2.63005170e-02 4.09302346e-02 7.14031339e-02 9.95172523e-03\n",
-      " 1.04485421e-02 3.02530688e-02 7.27616862e-02 2.78415286e-02\n",
-      " 3.47771798e-02 5.85342584e-02 8.87829306e-02 1.72984594e-02\n",
-      " 1.79249763e-02 2.76876473e-02 3.49816222e-02 9.99349302e-03\n",
-      " 8.09855439e-03 7.53359010e-03 5.74636840e-03 4.55049066e-03\n",
-      " 4.96816855e-03 7.13569695e-03 7.19505118e-03 4.66040589e-03\n",
-      " 4.34165172e-03 3.67556540e-03 2.79624354e-03 2.30602160e-03\n",
-      " 2.23127924e-03 2.37636735e-03 2.16752840e-03 2.20709789e-03\n",
-      " 2.31041821e-03 2.24227076e-03 2.08179452e-03 1.89713693e-03\n",
-      " 1.93230980e-03 1.86416236e-03 1.94989624e-03 2.04002673e-03\n",
-      " 2.23567585e-03 2.31481481e-03 2.32140973e-03 1.74545391e-03\n",
-      " 1.53881327e-03 1.68390138e-03 2.23567585e-03 2.05101825e-03\n",
-      " 1.73446238e-03 1.74105730e-03 1.42889803e-03 1.06837607e-03\n",
-      " 1.03100489e-03 1.02880658e-03 1.15191165e-03 1.15630826e-03\n",
-      " 1.01781506e-03 8.48545602e-04 7.71604938e-04 3.23150786e-04\n",
-      " 3.09960958e-04 3.40737223e-04 4.79230418e-04 5.75955823e-04\n",
-      " 3.93496535e-04 1.78062678e-04 1.25303366e-04 1.01122015e-04\n",
-      " 6.15525307e-05 7.03457494e-05 9.67254054e-05 1.36294889e-04\n",
-      " 1.25303366e-04 1.18708452e-04 7.47423587e-05 3.29745700e-05\n",
-      " 2.19830467e-05 1.53881327e-05 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
-      "Found optimal threshold: 128\n",
+      "Found optimal threshold: 90\n",
       "Saving image to: image_processed\\polymercell-segmented.png\n"
      ]
     }
