--- a/TDT4195-StarterCode-master/TDT4195-StarterCode-master/assignment3/2a.ipynb
+++ b/TDT4195-StarterCode-master/TDT4195-StarterCode-master/assignment3/2a.ipynb
@@ -14,20 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def lower_sum(upper_limit, array, function):\n",
-    "    \"\"\"\n",
-    "    Returns the sum of a function up to a upper_limit\n",
-    "    \"\"\"\n",
-    "    l_sum = 0\n",
-    "    for i in range(0,upper_limit):\n",
-    "        l_sum += function(i, array[i])\n",
-    "    \n",
-    "    return l_sum\n",
-    "\n",
     "def otsu_thresholding(im: np.ndarray) -> int:\n",
     "    \"\"\"\n",
     "        Otsu's thresholding algorithm that segments an image into 1 or 0 (True or False)\n",
@@ -51,27 +41,36 @@
     "    sum_hist = np.sum(hist)\n",
     "    p = hist/sum_hist\n",
     "    \n",
-    "    #checks that the histogram is normalized:\n",
-    "    assert(np.sum(p) == 1)\n",
     "    \n",
     "    # 2. Compute the cumulative sums, P_1(k), k = 0,1,2,..., L-1\n",
     "    # P_1 is the sum of p_i, i = 0,1,2,..., k\n",
     "    # equation (10-49)\n",
     "    \n",
-    "    P_1 = np.fromiter(map(lambda k: lower_sum(k+1,p,lambda i,p_i : p_i), range(L)), np.float)\n",
+    "    P_1 = np.zeros_like(p)\n",
+    "    for k in range(0, len(p)):\n",
+    "        if (k == 0):\n",
+    "            P_1[0] = p[0]\n",
+    "        else:\n",
+    "            P_1[k] = P_1[k-1] + p[k]\n",
     "    \n",
     "    # 3. Compute the cumulative mean (average intensity) , m(k), up to level k \n",
     "    # equation (10-53)\n",
-    "    m = np.fromiter(map(lambda k: lower_sum(k+1,p,lambda i,p_i : p_i*i), range(L)),np.float)\n",
+    "    m = np.zeros_like(p)\n",
+    "    for k in range(0,len(p)):\n",
+    "        if(k == 0):\n",
+    "            m[0] = 0\n",
+    "        else:\n",
+    "            m[k] = m[k-1] + p[k]*k\n",
     "    \n",
     "    # 4.Compute the global mean (average intensity of the entire image), m_g\n",
     "    # equation (10-54)\n",
-    "    m_g = lower_sum(L-1,p,lambda p_i,i : p_i*i)\n",
+    "    m_g = 0\n",
+    "    for i in range(0,L):\n",
+    "        m_g += p[i]*i\n",
     "    \n",
     "    # 5. Compute the between class variance, sigma_B_2, for k = 0,1,2,...L-1\n",
     "    # equation (10-62)\n",
-    "    sigma_B_2 = np.divide((m_g*P_1-m),(P_1*(1-P_1)))\n",
-    "    \"\"\" what if I divide on 0?\"\"\"\n",
+    "    sigma_B_2 = np.divide((m_g*P_1-m)**2,(P_1*(1-P_1)))\n",
     "    sigma_B_2[np.isnan(sigma_B_2)] = 0 #exchanges nan with 0\n",
     "\n",
     "    \n",
@@ -79,26 +78,32 @@
     "    # equation (10-63)\n",
     "    # If no unique maximum exists, it is customary to average the values of k in which sigma_B_2 is maximum\n",
     "    \n",
-    "    sigma_B_2_max = np.amax(sigma_B_2)\n",
-    "    \n",
-    "    \"\"\n",
-    "    k_star_lst = np.argwhere(sigma_B_2 == sigma_B_2_max).flatten().tolist()\n",
-    "    k_star = np.floor_divide(np.sum(k_star_lst), len(k_star_lst))\n",
-    "    \"\"\n",
+    "    sigma_B_2_max = np.max(sigma_B_2)\n",
+    "    k_star_list = np.argwhere(sigma_B_2 == sigma_B_2_max)\n",
+    "    if(len(k_star_list) == 1):\n",
+    "        k_star = np.argmax(sigma_B_2)\n",
+    "    else:\n",
+    "        k_star = np.divide(np.sum(k_star_list,len(k_star_list)))\n",
+    "         \n",
     "    # 7. Compute the global variance sigma_G_2\n",
     "    # equation (10-58)\n",
     "    \n",
     "    \"\"\"\n",
-    "    Why do I do this without it impacting the threshold?\n",
+    "    Skal det være m_g eller m_g[i]\n",
+    "    hvordan setter jeg i så fall m_g?\n",
     "    \"\"\"\n",
     "    \n",
-    "    sigma_G_2 = lower_sum(L, p, lambda i, p_i: (i - m_g)**2 * p_i)\n",
+    "    sigma_G_2 = np.empty(len(p))\n",
+    "    for i in range(0,L):\n",
+    "        if (i == 0):\n",
+    "            sigma_G_2[0] = (0-m_g)**2*p[0]\n",
+    "        else:\n",
+    "            sigma_G_2[i] = ((i-m_g)**2*p[i])\n",
     "    \n",
     "    #Obtain the seperability measure eta_star with k = k_star\n",
     "    # equation (10-61)\n",
     "    eta = sigma_B_2 / sigma_G_2\n",
     "    eta_star = eta[k_star]\n",
-    "    \n",
     "    \n",
     "    threshold = k_star\n",
     "    return threshold\n",
@@ -107,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -121,17 +126,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Kari Ness\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:53: RuntimeWarning: invalid value encountered in true_divide\n"
+      "C:\\Users\\Kari Ness\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:53: RuntimeWarning: invalid value encountered in true_divide\n",
+      "C:\\Users\\Kari Ness\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:85: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "C:\\Users\\Kari Ness\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:85: RuntimeWarning: invalid value encountered in true_divide\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found optimal threshold: 229\n",
+      "1518.6165530251312\n",
+      "Found optimal threshold: 153\n",
       "Saving image to: image_processed\\thumbprint-segmented.png\n",
       "Reading image: images\\polymercell.png\n",
-      "Found optimal threshold: 90\n",
+      "90.96707006915676\n",
+      "Found optimal threshold: 181\n",
       "Saving image to: image_processed\\polymercell-segmented.png\n"
      ]
     }
